--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,12 +2,28 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8"/>
-		<title>310 Frontend</title>
+		<title>CPSC 310 Team 109</title>
 		<link href="/style.css" rel="stylesheet" />
+
 	</head>
 	<body>
-		<button id="click-me-button" class="button" >Click Me!</button>
 
-		<script type="text/javascript" src="/frontend.js"></script>
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+		<form>
+			<div>
+				<label class="textinput">Professor Fullname</label>
+				<input class="textinput">
+			</div>
+			<br>
+			<div>
+				<button id="search" class="button">Search</button>
+			</div>
+		</form>
+			<br><br><br><br><br><br>
+
+			<script type="text/javascript" src="/frontend.js"></script>
+			<br><br><br><br><br><br>
+
 	</body>
 </html>
