--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -51,7 +51,7 @@
 				<label for="name2" class="userTwoInput2">Courses ID</label>
 			</div>
 			<div>
-				<input type="number" id="name2" class="userTwoInput2" placeholder="ID" required >
+				<input id="name2" class="userTwoInput2" placeholder="ID" required >
 			</div>
 			<br>
 			<div>
