--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,7 +30,7 @@
 				<label for="prof_fullname" class="textinput">Professor Fullname</label>
 			</div>
 			<div>
-				<input id="prof_fullname" class="textinput" placeholder="Professor's name" required>
+				<input id="prof_fullname" class="textinput" placeholder="Professor's Name" required>
 			</div>
 			<br>
 			<div>
@@ -45,13 +45,13 @@
 				<label for="name1" class="userTwoInput">Courses Department</label>
 			</div>
 			<div>
-				<input id="name1" class="userTwoInput" placeholder="Department name" required >
+				<input id="name1" class="userTwoInput" placeholder="Department Name" required >
 			</div>
 			<div>
 				<label for="name2" class="userTwoInput2">Courses ID</label>
 			</div>
 			<div>
-				<input id="name2" class="userTwoInput2" placeholder="ID" required >
+				<input id="name2" type="number" class="userTwoInput2" placeholder="ID" required >
 			</div>
 			<br>
 			<div>
