--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,7 +32,8 @@
 			<div>
 				<input id="prof_fullname" class="textinput" placeholder="Professor's Name" required>
 			</div>
-			<br>
+			<p style="color: white">Enter a professor name (ex: last name, first name)
+				to see all courses taught by this professor</p>
 			<div>
 				<button id="searchCourses" class="button">Search</button>
 			</div>
@@ -53,7 +54,7 @@
 			<div>
 				<input id="name2" type="number" class="userTwoInput2" placeholder="ID" required >
 			</div>
-			<br>
+			<p style="color: white; text-align: right"> Enter a course dept (ex: cpsc) and a course id (ex: 310)</p>
 			<div>
 				<button id="searchAVG" class="button">Search</button>
 			</div>
